--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -133,7 +133,8 @@
     <ClInclude Include="LibraryIncludes.h" />
     <ClInclude Include="Engine\Basic\GameTime.h" />
     <ClInclude Include="Engine\Graphics\Texture.h" />
-    <ClInclude Include="Structural\Components\Spatial\Transform.h" />
+    <ClInclude Include="Structural\Components\Spatial\TransformComponent.h" />
+    <ClInclude Include="Structural\Components\Visual\SpriteComponent.h" />
     <ClInclude Include="Structural\GameObject\GameComponent.h" />
     <ClInclude Include="Structural\GameObject\GameObject.h" />
     <ClInclude Include="Structural\GameObject\TestComponent.h" />
@@ -145,7 +146,8 @@
     <ClCompile Include="Engine\Content\ContentManager.cpp" />
     <ClCompile Include="Engine\Graphics\SuperTexture.cpp" />
     <ClCompile Include="Engine\Graphics\Texture.cpp" />
-    <ClCompile Include="Structural\Components\Spatial\Transform.cpp" />
+    <ClCompile Include="Structural\Components\Spatial\TransformComponent.cpp" />
+    <ClCompile Include="Structural\Components\Visual\SpriteComponent.cpp" />
     <ClCompile Include="Structural\GameObject\GameComponent.cpp" />
     <ClCompile Include="Structural\GameObject\GameObject.cpp" />
     <ClCompile Include="Structural\GameObject\TestComponent.cpp" />
