--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
@@ -137,6 +137,9 @@
     <ClInclude Include="Events\Observer.h" />
     <ClInclude Include="Events\Subject.h" />
     <ClInclude Include="File\File.h" />
+    <ClInclude Include="Object\Exceptions\ArgumentNullException.h" />
+    <ClInclude Include="Object\Exceptions\SystemNullReference.h" />
+    <ClInclude Include="Object\FException.h" />
     <ClInclude Include="Object\Object.h" />
     <ClInclude Include="Object\TypeHelpers.h" />
     <ClInclude Include="Structural\FPoint.h" />
@@ -150,6 +153,9 @@
     <ClCompile Include="Events\Observer.cpp" />
     <ClCompile Include="Events\Subject.cpp" />
     <ClCompile Include="File\File.cpp" />
+    <ClCompile Include="Object\Exceptions\ArgumentNullException.cpp" />
+    <ClCompile Include="Object\Exceptions\SystemNullReference.cpp" />
+    <ClCompile Include="Object\FException.cpp" />
     <ClCompile Include="Object\Object.cpp" />
     <ClCompile Include="Object\TypeHelpers.cpp" />
     <ClCompile Include="Structural\FPoint.cpp" />
