Added Collection and List

--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj.filters
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj.filters
@@ -59,6 +59,12 @@
     <Filter Include="Project Files\Object\Exceptions\API">
       <UniqueIdentifier>{53b82d5a-1968-4e4f-a1a4-d96711e16c03}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Project Files\Collection\Organised">
+      <UniqueIdentifier>{a785f6d0-9027-4fd0-b680-4123f4d5e1ee}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Collection\Organised\API">
+      <UniqueIdentifier>{5324aed0-019f-465a-9443-9eea3fce8731}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Text/FString.h">
@@ -114,6 +120,12 @@
     </ClInclude>
     <ClInclude Include="Object\Exceptions\ArgumentNullException.h">
       <Filter>Project Files\Object\Exceptions\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Collection\Organised\FCollection.h">
+      <Filter>Project Files\Collection\Organised\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Collection\Organised\FList.h">
+      <Filter>Project Files\Collection\Organised\API</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
