--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
@@ -128,6 +128,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Collection\Organised\FCollection.h" />
+    <ClInclude Include="Collection\Organised\FList.h" />
     <ClInclude Include="Collection\Vector\VectorHelpers.h" />
     <ClInclude Include="Events\FEvent.h" />
     <ClInclude Include="Events\FEventAction.h" />
