Added Unit Tests for FCollection

--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibraryTests/StandardCLibraryTests.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibraryTests/StandardCLibraryTests.vcxproj
@@ -99,6 +99,7 @@
     <ClInclude Include="LibraryIncludes.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Collection\Organised\FCollectionTests.cpp" />
     <ClCompile Include="Text\FStringTests.cpp" />
   </ItemGroup>
   <ItemGroup>
