--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibraryTests/StandardCLibraryTests.vcxproj.filters
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibraryTests/StandardCLibraryTests.vcxproj.filters
@@ -4,6 +4,9 @@
     <ClCompile Include="Text\FStringTests.cpp">
       <Filter>Text</Filter>
     </ClCompile>
+    <ClCompile Include="Collection\Organised\FCollectionTests.cpp">
+      <Filter>Collection\Organised</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Text">
@@ -11,6 +14,12 @@
     </Filter>
     <Filter Include="Package Files">
       <UniqueIdentifier>{abc4bd17-ee61-4f51-af54-1f3ed033a298}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Collection">
+      <UniqueIdentifier>{16a73baa-603e-4f31-adb7-a668ebb0d752}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Collection\Organised">
+      <UniqueIdentifier>{85c695e8-f55d-4a7a-be28-de27225f525f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
