Moved FCollection Helper methods to a separate file.

--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibraryTests/StandardCLibraryTests.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibraryTests/StandardCLibraryTests.vcxproj
@@ -96,6 +96,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Collection\Organised\FCollectionSharedTestHelpers.hpp" />
     <ClInclude Include="LibraryIncludes.h" />
   </ItemGroup>
   <ItemGroup>
