--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
@@ -143,7 +143,7 @@
     <ClInclude Include="Object\Exceptions\SystemNullReference.h" />
     <ClInclude Include="Object\FException.h" />
     <ClInclude Include="Object\Object.h" />
-    <ClInclude Include="Object\TypeHelpers.h" />
+    <ClInclude Include="Object\TypeHelpers.hpp" />
     <ClInclude Include="Structural\FPoint.h" />
     <ClInclude Include="Structural\FVector2D.h" />
     <ClInclude Include="Text/FString.h" />
@@ -159,7 +159,6 @@
     <ClCompile Include="Object\Exceptions\SystemNullReference.cpp" />
     <ClCompile Include="Object\FException.cpp" />
     <ClCompile Include="Object\Object.cpp" />
-    <ClCompile Include="Object\TypeHelpers.cpp" />
     <ClCompile Include="Structural\FPoint.cpp" />
     <ClCompile Include="Structural\FPointLocationEventArguments.h" />
     <ClCompile Include="Structural\FVector2D.cpp" />
