[#7] You can now get the down, pressed and released state of keys on the keyboard.

--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -130,9 +130,14 @@
   <ItemGroup>
     <ClInclude Include="Engine\Content\ContentManager.h" />
     <ClInclude Include="Engine\Graphics\SuperTexture.h" />
+    <ClInclude Include="Engine\Input\DirectInput.h" />
+    <ClInclude Include="Engine\Input\DirectKeyInput.h" />
+    <ClInclude Include="Engine\Input\InputKeyCode.hpp" />
+    <ClInclude Include="Engine\Input\KeyState.hpp" />
     <ClInclude Include="LibraryIncludes.h" />
     <ClInclude Include="Engine\Basic\GameTime.h" />
     <ClInclude Include="Engine\Graphics\Texture.h" />
+    <ClInclude Include="Structural\Components\Example\UserInputTestComponent.h" />
     <ClInclude Include="Structural\Components\Spatial\TransformComponent.h" />
     <ClInclude Include="Structural\Components\Visual\SpriteComponent.h" />
     <ClInclude Include="Structural\GameObject\GameComponent.h" />
@@ -146,6 +151,9 @@
     <ClCompile Include="Engine\Content\ContentManager.cpp" />
     <ClCompile Include="Engine\Graphics\SuperTexture.cpp" />
     <ClCompile Include="Engine\Graphics\Texture.cpp" />
+    <ClCompile Include="Engine\Input\DirectInput.cpp" />
+    <ClCompile Include="Engine\Input\DirectKeyInput.cpp" />
+    <ClCompile Include="Structural\Components\Example\UserInputTestComponent.cpp" />
     <ClCompile Include="Structural\Components\Spatial\TransformComponent.cpp" />
     <ClCompile Include="Structural\Components\Visual\SpriteComponent.cpp" />
     <ClCompile Include="Structural\GameObject\GameComponent.cpp" />
