Added Controller Resolving via a data structure.

--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -131,6 +131,10 @@
     <ClInclude Include="Engine\Content\ContentManager.h" />
     <ClInclude Include="Engine\Graphics\SuperTexture.h" />
     <ClInclude Include="Engine\Input\Controller.hpp" />
+    <ClInclude Include="Engine\Input\ControllerAxisMappedToButton.h" />
+    <ClInclude Include="Engine\Input\ControllerAxisMappingEvaluation.h" />
+    <ClInclude Include="Engine\Input\ControllerComparisonType.hpp" />
+    <ClInclude Include="Engine\Input\ControllerLayoutCollection.h" />
     <ClInclude Include="Engine\Input\ControllerMapper.h" />
     <ClInclude Include="Engine\Input\ControllerResolver.h" />
     <ClInclude Include="Engine\Input\DirectInput.h" />
@@ -157,6 +161,8 @@
     <ClCompile Include="Engine\Content\ContentManager.cpp" />
     <ClCompile Include="Engine\Graphics\SuperTexture.cpp" />
     <ClCompile Include="Engine\Graphics\Texture.cpp" />
+    <ClCompile Include="Engine\Input\ControllerLayout.h" />
+    <ClCompile Include="Engine\Input\ControllerLayoutCollection.cpp" />
     <ClCompile Include="Engine\Input\ControllerMapper.cpp" />
     <ClCompile Include="Engine\Input\ControllerResolver.cpp" />
     <ClCompile Include="Engine\Input\DirectInput.cpp" />
