--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
@@ -71,6 +71,9 @@
     <Filter Include="Project Files\Structural\Components\Examples\API">
       <UniqueIdentifier>{0b943776-f5b8-41c5-9376-42ea5f69d861}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Project Files\Engine\Input\Resources">
+      <UniqueIdentifier>{da1c21a8-eb5b-4b66-ac0a-c753c3506a98}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Structural\Scene\GrandScene.cpp">
@@ -122,6 +125,12 @@
       <Filter>Project Files\Engine\Input</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Input\ControllerMapper.cpp">
+      <Filter>Project Files\Engine\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Input\ControllerLayout.h">
+      <Filter>Project Files\Engine\Input\API</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Input\ControllerLayoutCollection.cpp">
       <Filter>Project Files\Engine\Input</Filter>
     </ClCompile>
   </ItemGroup>
@@ -196,6 +205,18 @@
       <Filter>Project Files\Engine\Input\API</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Input\ControllerMapper.h">
+      <Filter>Project Files\Engine\Input\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Input\ControllerAxisMappedToButton.h">
+      <Filter>Project Files\Engine\Input\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Input\ControllerAxisMappingEvaluation.h">
+      <Filter>Project Files\Engine\Input\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Input\ControllerComparisonType.hpp">
+      <Filter>Project Files\Engine\Input\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Input\ControllerLayoutCollection.h">
       <Filter>Project Files\Engine\Input\API</Filter>
     </ClInclude>
   </ItemGroup>
